<resources>
    <string name="app_name">YOSIGO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Actividades</string>
    <string name="menu_slideshow">Foros</string>
    <string name="create_activity">Crear actividad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ver_actividad">Ver Actividad</string>
    <string name="menu_calendar">Calendario</string>
    <string name="escribir_mensaje">Escribe un mensaje</string>
    <string name="menu_category">Categorías</string>
    <string name="actividades">Actividades</string>
    <string name="foros">Foros</string>
    <string name="goals">Metas</string>
    <string name="calendario">Calendario</string>
    <string name="groups">Grupos</string>
    <string name="channel_name">Actividad Modificada</string>
    <string name="channel_description">Canal de notificaciones</string>
</resources>