<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendario"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_forums"
            android:icon="@drawable/chatear"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/actividades"
            android:title="@string/actividades" />
    </group>
</menu>