<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_persona"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.yosigo.Persona.HomePersona.HomePersonaFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_persona" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_activity" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_forums" />
    </fragment>

    <fragment
        android:id="@+id/nav_activity"
        android:name="com.example.yosigo.Persona.ActivitiesPersona.ListActivitiesPersona"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_forums"
        android:name="com.example.yosigo.Persona.ForumsPersona.ListForumsPersona"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>