<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.yosigo.Facilitador.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_facilitador" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_activity" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_forums" />
    </fragment>

    <fragment
        android:id="@+id/nav_activity"
        android:name="com.example.yosigo.Facilitador.ActivitiesFacilitador.ListActivitiesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/list_activities_facilitador" >
        <action
            android:id="@+id/action_nav_gallery_to_createActivity"
            app:destination="@id/createActivity" />
        <action
            android:id="@+id/action_nav_activity_to_activityViewFragment"
            app:destination="@id/activityViewFragment" />
        <action
            android:id="@+id/action_nav_activity_to_asociateFragment"
            app:destination="@id/asociateFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_forums"
        android:name="com.example.yosigo.Facilitador.ForumsFacilitador.ForumsListFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/list_forum_facilitador" >
        <action
            android:id="@+id/action_nav_forums_to_chatFacilitadorFragment"
            app:destination="@id/chatFacilitadorFragment" />
    </fragment>
    <fragment
        android:id="@+id/createActivity"
        android:name="com.example.yosigo.Facilitador.ActivitiesFacilitador.CreateActivity"
        android:label="@string/create_activity"
        tools:layout="@layout/fragment_create_activity" />
    <fragment
        android:id="@+id/activityViewFragment"
        android:name="com.example.yosigo.Facilitador.ActivitiesFacilitador.ActivityViewFragment"
        android:label="@string/ver_actividad"
        tools:layout="@layout/fragment_activity_view" >
        <argument
            android:name="param1"
            app:argType="string"
            android:defaultValue="0"
            />
        <action
            android:id="@+id/action_activityViewFragment_to_feedbackFacilitadorFragment"
            app:destination="@id/feedbackFacilitadorFragment" />
        <action
            android:id="@+id/action_activityViewFragment_to_viewAssessmentFragment"
            app:destination="@id/viewAssessmentFragment" />
        <action
            android:id="@+id/action_activityViewFragment_to_chatUsersListFragment"
            app:destination="@id/chatUsersListFragment" />
    </fragment>
    <fragment
        android:id="@+id/asociateFragment"
        android:name="com.example.yosigo.Facilitador.ActivitiesFacilitador.AsociateFragment"
        android:label="Asociar personas"
        tools:layout="@layout/asociate_fragment" >
        <argument
            android:name="param1"
            app:argType="string"
            android:defaultValue="0"
            />
    </fragment>
    <fragment
        android:id="@+id/feedbackFacilitadorFragment"
        android:name="com.example.yosigo.Facilitador.ActivitiesFacilitador.FeedbackFacilitadorFragment"
        android:label="Retroalimentaciones"
        tools:layout="@layout/fragment_feedback_facilitador">
        <argument
            android:name="param1"
            app:argType="string"
            android:defaultValue="0"
            />
    </fragment>
    <fragment
        android:id="@+id/viewAssessmentFragment"
        android:name="com.example.yosigo.Facilitador.ActivitiesFacilitador.ViewAssessmentFragment"
        android:label="Valoraciones"
        tools:layout="@layout/fragment_view_assessment_list" >
        <argument
            android:name="param1"
            app:argType="string"
            android:defaultValue="0"
            />
    </fragment>
    <fragment
        android:id="@+id/chatFacilitadorFragment"
        android:name="com.example.yosigo.Facilitador.ForumsFacilitador.ChatFacilitadorFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat_facilitador" >
        <argument
            android:name="param1"
            app:argType="string"
            android:defaultValue="0"
            />
        <argument
            android:name="param2"
            app:argType="string"
            android:defaultValue="0"
            />
    </fragment>
    <fragment
        android:id="@+id/chatUsersListFragment"
        android:name="com.example.yosigo.Facilitador.ForumsFacilitador.ChatUsersListFragment"
        android:label="Chats con usuarios"
        tools:layout="@layout/fragment_chat_users_list" >
        <action
            android:id="@+id/action_chatUsersListFragment_to_chatFacilitadorFragment"
            app:destination="@id/chatFacilitadorFragment" />
        <argument
            android:name="param1"
            app:argType="string"
            android:defaultValue="0"
            />
    </fragment>
</navigation>