<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Facilitador.home.HomeFragment">

    <Button
        android:id="@+id/button_facilitador_activities"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorActivities"
        android:text="@string/actividades"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_facilitador_forum"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorForums"
        android:text="@string/foros"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_facilitador_activities" />

    <Button
        android:id="@+id/button_facilitador_categoria"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="categoría"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_facilitador_forum" />

    <Button
        android:id="@+id/button_facilitador_metas"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/goals"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_facilitador_categoria" />

    <Button
        android:id="@+id/button_facilitador_group"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="grupos"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_facilitador_metas" />

    <Button
        android:id="@+id/button_facilitador_logout"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:text="cerrar sesión"
        android:textColor="@color/white"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>